--- a/proProject/package.json
+++ b/proProject/package.json
@@ -61,7 +61,10 @@
     "@ant-design/icons": "^4.0.0",
     "@ant-design/pro-layout": "^5.0.8",
     "@ant-design/pro-table": "2.2.9",
+    "@antv/data-set": "^0.11.7",
     "antd": "4.2.5",
+    "bizcharts": "^4.0.17",
+    "bizcharts-plugin-slider": "^3.0.1",
     "classnames": "^2.2.6",
     "lodash": "^4.17.11",
     "moment": "^2.25.3",
